--- a/css/style.css
+++ b/css/style.css
@@ -204,6 +204,75 @@ header {
 #Experience {
   font-size: 15px;
 }
+/* bonush section */
+.Bon__Sec__mainMAin {
+  padding-top: 50px;
+}
+.Bon__Sec__main {
+  background-image: linear-gradient(
+      to bottom,
+      rgba(84, 85, 92, 0.52),
+      rgba(236, 184, 223, 0.73)
+    ),
+    url("../g3-architects/images/team2.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-size: cover;
+  background-position: center;
+  height: 500px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 100px;
+  gap: 20px;
+  color: white;
+}
+.Bon__Sec-Para {
+  font-family: "Work Sans";
+  font-weight: 500;
+  font-size: 35px;
+}
+.Bon__Sec-Para_Span {
+  font-size: 15px;
+  color: rgb(0, 217, 255);
+}
+.Bon__Sec-heading {
+  font-family: "Work Sans";
+  font-weight: 700;
+  font-size: 45px;
+}
+.Bon__Sec-Arrow-two {
+  display: flex;
+  gap: 40px;
+}
+.Bon__Sec-Arrow-two > i {
+  color: rgb(7, 44, 51);
+  font-size: 30px;
+}
+.bon__lower-pra {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.Bon__Sec-Paratwo {
+  font-family: "Work Sans";
+  font-weight: 400;
+  font-size: 25px;
+  color: #000;
+}
+.Bon__Sec-Parathree {
+  font-family: "Work Sans";
+  font-weight: 400;
+  font-size: 20px;
+  display: flex;
+  gap: 10px;
+  color: #000;
+  transform: translate(0px, 70px);
+}
+.Bon__Sec-Parathree > i {
+  color: rgb(0, 217, 255);
+}
 /* Website Some Fact Sec Style */
 .Some__Sec {
   padding-top: 80px;
