--- a/css/style.css
+++ b/css/style.css
@@ -92,21 +92,21 @@ header {
   padding: 100px 30px 40px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  column-gap: 50px;
 }
 .Quick__list-ImgMain {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  column-gap: 10px;
+  row-gap: 10px;
 }
 .Quick__list-ImgDiv {
-  /* background-color: aqua; */
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-right: 50px;
-  width: 300px;
-  height: 342px;
+  width: 100%;
+  height: 100%;
 }
 .Quick__list-Img {
   width: 100%;
+  height: 100%;
 }
 .Quick__list-TitleMain {
   display: flex;
